Revert "Test tab-content border box"
This reverts commit aeb035e84cb9de1b542406ea7ee22cf8b6eec20a.

--- a/style.css
+++ b/style.css
@@ -401,7 +401,7 @@ p {
 
 .tab-content {
   /*background-color: yellow;*/
-  /*box-sizing: border-box;*/
+  box-sizing: border-box;
   width: 100%;
   position: relative;
   color: var(--color-ivory);
