--- a/style.css
+++ b/style.css
@@ -285,7 +285,7 @@ p {
   display: block;
   margin: auto;
   text-align: center;
-  padding-top: 2vh;
+  padding-top: 10vh;
 }
 
 .picture-container {
@@ -361,11 +361,10 @@ p {
   /*background-color: green;*/
   box-sizing: border-box;
   display: inline-flex;
-  width: 100%;
   white-space: nowrap;
   overflow-x: auto;
   padding: 0;
-  position: absolute;
+  width: 100%;
 }
 
 .tabs button{
@@ -472,8 +471,8 @@ p {
 .carousel_container {
   background-color: transparent;
   
-  height: 50%;
-  min-height: 360px;
+  height: 70%;
+  min-height: 450px;
   width: 100%;
   
   box-sizing: border-box; 
@@ -512,8 +511,7 @@ p {
   margin-bottom: 50px;
   padding: 0 5%;
   box-shadow: 0 20px 40px rgba(0, 0, 0, .4);
-  
-  
+
   flex-shrink: 0;
   scroll-snap-align: start;
   
@@ -531,9 +529,10 @@ p {
   background-color: var(--color-light-green);
   width: 100%;
   height: 15%;
-  min-height: 60px;
+  min-height: 70px;
   overflow-y: hidden;
-  padding-top: 5%;
+  padding-top: 10%;
+  z-index: 1;
   
   position: -webkit-sticky;
   position: sticky;
@@ -549,16 +548,34 @@ p {
   height: 85%;
 }
 
-.project_skills {
+.project_image {
   background-color: transparent;
   height: 100%;
+  min-height: 200px;
+  position: relative;
 }
 
 .project_description {
+  background-color: transparent;
+  padding-top: 5%;
   height: 100%;
 }
 
-.project_skills ul {
+.project_description li {
+  margin-bottom: 5%;
+  margin-left: 20px;
+  font-size: 14px;
+}
+
+.project_description a {
+  text-decoration: underline;
+}
+
+#portfolioDescription {
+  color: var(--color-ivory);
+}
+
+.project_image ul {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   margin-left: 0px;
@@ -567,22 +584,40 @@ p {
   list-style: none;
 }
 
-.project_skills ul img {
+.project_image ul img {
   width: 75px;
   height: 50px;
   margin-bottom: 10px;
 }
 
-.project_skills h3 {
+.project_image h3 {
   margin-top: 0;
   padding-bottom: 2vh;
 }
 
+.project_image h4 {
+  color: var(--color-ivory);
+  border: solid var(--color-ivory) 1px;
+  border-radius: 2000px;
+  padding: 1% 3%;
+  position: absolute;
+  bottom: 10%;
+}
+
 .item p {
   margin-top: 0;
-  color: transparent;
   font-size: 14px;
 }
+
+.appImage {
+  height: min(80%, 225px);
+  width: auto;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 5% 0;
+}
+
 
 /* Contact Section */
 *, *:before, *:after {
@@ -658,6 +693,14 @@ p {
 
 .socials a{
   padding-top: 10px;
+}
+
+#githubLink {
+  fill: var(--color-brown);
+}
+
+#githubLink:hover {
+  fill: var(--color-yellow-green);
 }
 
 .app-title {
@@ -738,6 +781,29 @@ p {
 }
 
 /* Media queries */
+
+@media (min-height: 900px) and (min-width: 600px) {
+
+ /* Projects Section */
+ .project_description {
+  height: 50%;
+  padding-top: 0;
+}
+
+.project_image {
+  height: 50%;
+}
+
+.project_description li {
+  font-size: max(10px, min(14px, 2vw));
+}
+
+.project_image h4 {
+  color: transparent;
+  border: transparent;
+}
+}
+
 @media screen and (min-width: 600px) {
   .menu-btn, .sidenav, .overlay, .sidenav-header{
     display: none;
