--- a/style.css
+++ b/style.css
@@ -502,15 +502,13 @@ p {
 
 .item {
   background-color: var(--color-light-green);
-  
   width: 95%;
   max-width: 350px;
   box-sizing: border-box;
   margin-right: 2%;
   margin-top: 20px;
   margin-bottom: 50px;
-  padding: 0 5%;
-  box-shadow: 0 20px 40px rgba(0, 0, 0, .4);
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, .4);
 
   flex-shrink: 0;
   scroll-snap-align: start;
@@ -527,11 +525,11 @@ p {
 
 .item_title {
   background-color: var(--color-light-green);
-  width: 105%;
+  width: 100%;
   height: 15%;
   min-height: 70px;
   overflow-y: hidden;
-  padding-top: 10%;
+  padding: 10% 5% 0%;
   z-index: 1;
   
   position: -webkit-sticky;
@@ -545,10 +543,17 @@ p {
 }
 
 .item_content {
+  padding: 5%;
   height: 85%;
 }
 
 .project_image {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10%;
+
   background-color: transparent;
   height: 100%;
   min-height: 200px;
@@ -599,9 +604,10 @@ p {
   color: var(--color-ivory);
   border: solid var(--color-ivory) 1px;
   border-radius: 2000px;
+  display: flex;
+  justify-content: center;
+  width: fit-content;
   padding: 1% 3%;
-  position: absolute;
-  bottom: 10%;
 }
 
 .item p {
@@ -610,16 +616,20 @@ p {
 }
 
 .appImage {
-  height: min(80%, 225px);
-  width: auto;
+  max-width: 315px;
+  max-height: 250px;
+  width: 100%;
+  height: auto;
   display: block;
-  margin-right: auto;
-  margin-left: auto;
   padding: 5% 0;
 }
 
-#mockTradingAppImage {
-  width: 100%;
+#calculatorAppImage {
+  max-width: 160px;
+}
+
+#bankingAppImage {
+  max-width: 200px;
 }
 
 
@@ -804,6 +814,7 @@ p {
 
 .project_image h4 {
   color: transparent;
+  display: none;
   border: transparent;
 }
 }
